Serves static files

--- a/public/lorem.html
+++ b/public/lorem.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lorem ipsum</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav>
